# aposd

./: .gitmodules  .travis.yml  AdaptivePortfolioSelectionDistributed  CMakeLists.txt  Makefile  Makefile-  README.md  echoecho  file  version.h.in
.circleci/: config.yml
cmake/: clang-format.cmake
configuration/: aposd-sequential.json  aposd-webApps.json
docs/: index.html
include/calculationModel/SaaS/: learningOnline.hpp  learningOnlineCollective.hpp  learningOnlineIndividual.hpp
include/calculationModel/islandModel/: islandModel.hpp  sharedParameter.hpp
include/calculationModel/islandModel/topologies/: circle.hpp  complete.hpp  randomEdge.hpp  star.hpp  topologies.hpp
include/calculationModel/masterWorkers/: masterSynchronous.hpp  masterWorkersSynchronous.hpp  workersSynchronous.hpp
include/calculationModel/sequentialModel/: sequentialModel.hpp
include/interface/: aposd_mpi.hpp  aposd_sequential.hpp  aposd_webApps.hpp  classBuilder.hpp
include/launcher/: launcher.hpp  launcherExec.hpp  launcherFork.hpp
include/launcher/launcherClass/: launcherStocos.hpp
include/parameterSelection/: parameterSelection.hpp  psAdaptivePursuit.hpp  psConstant.hpp  psEpsilonGreedyW.hpp  psRandom.hpp  psSelectBestMutate.hpp  psUCBW.hpp
include/rewardComputation/: rewardComputation.hpp
include/selection/: selection_maximization.hpp  selection_minimization.hpp  solutionSelection.hpp
include/solution/: solution.hpp
include/stoppingCriteria/: criteria.hpp  criteriaBudget.hpp  criteriaFitnessObjectif.hpp  stoppingCriteria.hpp
runConfig/: aposd-mpi.json  aposd-sequential.json  aposd-webApps.json
sources/: configurations.h  macro.h  main.cpp  unitTest.cpp
sources/calculationModel/: calculationModel.h  calculationModel.hpp  mpiConfig.hpp
sources/calculationModel/SaaS/: learningOnline.h  learningOnline.hpp  learningOnlineCollective.h  learningOnlineCollective.hpp  learningOnlineIndividual.h  learningOnlineIndividual.hpp
sources/calculationModel/islandModel/: islandModel.h  islandModel.hpp  sharedParameter.1.h  sharedParameter.h  sharedParameter.hpp
sources/calculationModel/islandModel/topologies/: circle.h  circle.hpp  complete.h  complete.hpp  randomEdge.h  randomEdge.hpp  star.h  star.hpp  topologies.h  topologies.hpp
sources/calculationModel/masterWorkers/: master.h  master.hpp  masterSynchronous.h  masterSynchronous.hpp  masterWorkersSynchronous.h  masterWorkersSynchronous.hpp  workers.hpp  workersSynchronous.h  workersSynchronous.hpp
sources/calculationModel/masterWorkers/mpi/: masterSynchronous.h  masterWorkersSynchronous.h
sources/calculationModel/masterWorkers/websocket/: masterWebsocket.h
sources/calculationModel/sequentialModel/: sequentialModel.h  sequentialModel.hpp
sources/communicationModel/: aposd_mpi.h  aposd_sequential.h  aposd_webApps.h  classBuilder.h  communicationModel.h
sources/distributedModel/: distributedModel.h
sources/distributedModel/masterWorkers/: master.h  masterSynchronous.h  masterWorkersSynchronous.h  workers.h
sources/distributedModel/sequentialModel/: sequentialModel.h
sources/interface/: aposd_mpi.h  aposd_mpi.hpp  aposd_sequential.h  aposd_sequential.hpp  aposd_webApps.h  aposd_webApps.hpp  classBuilder.h  classBuilder.hpp  interface.h  interface.hpp
sources/launcher/: launcher.h  launcher.hpp  launcherExec.h  launcherExec.hpp  launcherFork.h  launcherFork.hpp  unitTest_launcherExec.h
sources/launcher/launcherClass/: launcherStocos.h  launcherStocos.hpp
sources/launcher/test-cppcms/: config.js  main  main.cpp
sources/parameterSelection/: parameterSelection.h  parameterSelection.hpp  psAdaptivePursuit.h  psAdaptivePursuit.hpp  psConstant.h  psConstant.hpp  psEpsilonGreedyW.h  psEpsilonGreedyW.hpp  psRandom.h  psRandom.hpp  psSelectBestMutate.h  psSelectBestMutate.hpp  psUCBW.h  psUCBW.hpp  unitTest_psAdaptivePursuit.h  unitTest_psConstant.h  unitTest_psEpsilonGreedyW.h  unitTest_psRandom.h  unitTest_psSelectBestMutate.h  unitTest_psUCBW.h
sources/rewardComputation/: rewardComputation.h  rewardComputation.hpp  rewardOperator.h.old
sources/selection/: selection.h  selection_maximization.h  selection_maximization.hpp  selection_maximization.h~  selection_minimization.h  selection_minimization.hpp  solutionSelection.h  solutionSelection.hpp
sources/settings/: settings.h
sources/solution/: solution.h  solution.hpp  unitTest_solution.h
sources/stoppingCriteria/: criteria.h  criteria.hpp  criteriaBudget.h  criteriaBudget.hpp  criteriaFitnessObjectif.h  criteriaFitnessObjectif.hpp  stoppingCriteria.h  stoppingCriteria.hpp
sources/viewing/: loading.h
src/: main.cpp
src/calculationModel/SaaS/: learningOnlineCollective.cpp  learningOnlineIndividual.cpp
src/calculationModel/islandModel/: sharedParameter.cpp
src/calculationModel/masterWorkers/: masterSynchronous.cpp  masterWorkersSynchronous.cpp  workersSynchronous.cpp
src/calculationModel/sequentialModel/: sequentialModel.cpp
src/interface/: aposd_mpi.cpp  aposd_sequential.cpp  aposd_webApps.cpp  classBuilder.cpp
src/launcher/: launcherExec.cpp  launcherFork.cpp
src/launcher/launcherClass/: launcherStocos.cpp
src/parameterSelection/: psAdaptivePursuit.cpp  psConstant.cpp  psEpsilonGreedyW.cpp  psRandom.cpp  psSelectBestMutate.cpp  psUCBW.cpp
src/rewardComputation/: rewardComputation.cpp
src/selection/: selection_maximization.cpp  selection_minimization.cpp
src/solution/: solution.cpp
src/stoppingCriteria/: criteriaBudget.cpp  criteriaFitnessObjectif.cpp  stoppingCriteria.cpp
test/: aposd_saas_collective.py  aposd_saas_individual.py  aposd_test.py
tests-aposd/: aposd_saas_collective.py  aposd_saas_individual.py  launch_aposd.py
tests-unitaires/: unitTest.cpp
tests-unitaires/launcher/: unitTest_launcherExec.hpp
tests-unitaires/parameterSelection/: unitTest_psAdaptivePursuit.hpp  unitTest_psConstant.hpp  unitTest_psEpsilonGreedyW.hpp  unitTest_psRandom.hpp  unitTest_psSelectBestMutate.hpp  unitTest_psUCBW.hpp
tests-unitaires/solution/: unitTest_solution.hpp
tests-unitaires/stoppingCriteria/: unitTest_criteriaBudget.hpp
(+5 files in other folders)
